
  Changes:
    - Added 64 tiles no one's land for 2 way split. This will only apply to newly generated chunk or new map
    - All GUI buttons required admin role.
    - Various code optimizations

  Bugfixes:
    - Attempt to fix run away high level units during the map processing. Some players are seeing immortal (high level) units.
    - Fix a compatibility crash with combat-mechanics-overhaul

  Scripts:
    - Added animation rig to change animation prototypes.
    - Added weapon rig to change weapon / ammo prototypes.


---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 07. 03. 2021

  Changes:
    - Air unit now use "flying-layer", instead of hardcoded layer-33.  This enhance collision layer compatibility with Space Exploration
    - ** ERM Race mods also need to update

  Bugfixes:
    - Fix projectile collision issue for air units with Industrial Revolution 2 mod


---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 07. 01. 2021

  Changes:
    - Explosion from explosive projectiles can now hit air by default.  This includes explosive cannon shells and artillery shells.
    - Air units use "layer-33" as air-unit collision layer.  This requires race mod updates.
    - Add an option to toggle whether ground weapon can hit air units. This includes shotgun pellets, tank-shells, grenades, poison capsule and slowdown capsule. Disable by default.

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 06. 27. 2021

  Features:
    - --- Added a command to override race level ---
    - Usage: /ERM_levelup erm_vanilla,5
    - Overriding level must be equal or higher than the level calculated by evolution points.

  Changes:
    - Removed level up by tech command
    - Code Refactor.
